Natural Order Resharding Pipeline Does Not Increment collectionCloningTotalRemoteBatchRetrievalTimeMillis

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: 8.0.0
    • Component/s: None
    • Cluster Scalability
    • ALL
    • ClusterScalability Jun9-Jun23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      collectionCloningTotalRemoteBatchRetrievalTimeMillis was incremented here under the old pipeline and represents the time the recipient spends reading a batch from a donor. The natural order pipeline avoids calling doOneBatch and instead uses _runOnceWithNaturalOrder. A call to _metrics->onCloningRemoteBatchRetrieval should be added somewhere in _runOnceWithNaturalOrder or _queryOnceWithNaturalOrder. We should also add a unit test for the resharding collection cloner that verifies it is incrementing these metrics.

      Note that the corresponding collectionCloningTotalLocalInsertTimeMillis, which represents the time the recipient spends writing that batch to itself, was unaffected. This is because it is incremented here in writeOneBatch, which is called by _writeOnceWithNaturalOrder.

            Assignee:
            Lucy Wu (Inactive)
            Reporter:
            Brett Nawrocki
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: