SERVER-99746 Natural Order Resharding Pipeline Does Not Increment collectionCloningTotalRemoteBatchRetrievalTimeMillis (#37443)

GitOrigin-RevId: 252a45d3562a93c585e2862f4b14a62a79f69729